[gd_scene load_steps=2 format=2]

[ext_resource path="res://join_menu/join_menu.gd" type="Script" id=1]

[node name="join_menu" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="name_line_edit" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 700.0
margin_top = 325.0
margin_right = 1130.0
margin_bottom = 439.0

[node name="label" type="Label" parent="name_line_edit"]
margin_left = -162.0
margin_right = -30.0
margin_bottom = 104.0
text = "ชื่อ"

[node name="ip_line_edit" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 695.0
margin_top = 520.0
margin_right = 1125.0
margin_bottom = 634.0
text = "192.168.0.105"

[node name="label" type="Label" parent="ip_line_edit"]
margin_left = -162.0
margin_right = -30.0
margin_bottom = 104.0
text = "ip"

[node name="join_button" type="Button" parent="."]
margin_left = 949.0
margin_top = 774.0
margin_right = 1379.0
margin_bottom = 884.0
text = "เข้าร่วม"

[connection signal="pressed" from="join_button" to="." method="_on_join_button_pressed"]
